Added a Feed model and a FeedList model. Currently feed/new allows users to input an rss url. The backend will use that url to parse and create a new instance of the Feed model.

--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,5 +1,7 @@
+<%#Header of the page%>
 <h1>Feeds#new</h1>
-<%= form_tag("/feeds/parse_rss", method: "get") do %>
+<%#Creates a label, text entry, and submit button%>
+<%= form_tag("/feeds/parse_rss", method: "post") do %>
   <%= label_tag(:q, "URL:") %>
   <%= text_field_tag(:q) %>
   <%= submit_tag("Submit") %>
