--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,4 +1,11 @@
 <h1><%= @feed.title %></h1>
 <p><%= @feed.url %></p>
 <p><%= @feed.description %></p>
+
+<% @feed.articles.each do |article| %>
+  <ul>
+    <p><%= article.title %></p>
+  </ul>
+<% end %>
+
 <%= link_to "<< Back to Feeds List", feeds_path %>
