Added Articles as a nested resource to Feeds. Articles now has a Show View/Controller. Feed/Show now creates a link to Feed/Article/Show.

--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -4,7 +4,7 @@
 
 <% @feed.articles.each do |article| %>
   <ul>
-    <p><%= article.title %></p>
+    <p><%= link_to article.title, feed_article_path(@feed,article) %></p>
   </ul>
 <% end %>
 
