--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -4,6 +4,9 @@
   <% @feeds.each do |feed| %>
     <li>
       <%= link_to feed.title, feed_path(feed) %>
+      <%= "(" %>
+      <%= link_to "x", feed_path(feed), method: :delete %>
+      <%= ")" %>
     </li>
   <% end %>
 </ul>
