--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,11 +1,9 @@
 <%#Header of the page%>
 <h1>Feeds#new</h1>
-<%#Creates a label, text entry, and submit button%>
-<%#<%= form_tag("/feeds/parse_rss", method: "post") do %>
-  <%#<%= label_tag(:q, "URL:") %>
-  <%#<%= text_field_tag(:q) %>
-  <%#<%= submit_tag("Submit") %>
-<%#<% end %>
+
+<% if params[:error] %>
+<p><%= params[:error] %></p>
+<% end %>
 
 <%= form_for(@feed) do |f| %>
   <ul>
@@ -21,3 +19,5 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<%= link_to "<< Back to Feeds List", feeds_path %>
