Home page is now being used to test out style ideas. Currently the page is divided vertically at 30% between the colors of black and grey.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html, body, div {
+    height: 100%;
+}
+div {
+    float: left;
+}
+.feeds {
+    width: 30%;
+    background-color: black;
+}
+.articles {
+    width: 70%;
+    background-color: grey;
+}
