--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
-<h1>Hello, Rails!</h1>
-
-<button type="button" class="btn btn-primary">Primary</button>
+<div class = "feeds">
+  <p>1 blaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaah</p>
+  <p>2</p>
+  <p>3</p>
+  <p>4</p>
+  <p>5</p>
+</div>
+<div class = "articles"></div>
