FeedsUpdateJob can now be used to update individual feeds or all of the feeds. FeedsUpdateJob is used to syncronously update new feeds before users arrive at feeds/show

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Hello, Rails!</h1>
-
-<button type="button" class="btn btn-primary">Primary</button>
+<div class = "feeds">
+</div>
+<div class = "articles">
+</div>
