Formating has been moved from testing on welcome/index.html.erb to the general layouts/application.html.erb so that it applies to all pages within the application.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class = "feeds">
+      <span style = "float: right">
+        <%= "kurionta v"%>
+      </span>
+      <hr>
+      <%= yield :feeds%>
+    </div>
+
+    <div class = "articles">
+      <%= yield %>
+    </div>
   </body>
 </html>
