--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,34 @@
 
   <body>
     <div class = "feeds">
+      <%= link_to "Home", "/" %>
       <span style = "float: right">
         <%= "kurionta v"%>
       </span>
       <hr>
-      <%= yield :feeds%>
+      <% @feeds.each do |feed| %>
+        <p>
+          <%= link_to feed.title, feed_path(feed) %>
+          <span style = "float:right;">
+            <%= "(" %>
+            <%= link_to "x", feed_path(feed), method: :delete %>
+            <%= ")" %>
+          </span>
+        </p>
+      <% end %>
+      <hr>
+      <%= form_for(@newfeed, :html => {:style => 'color: black; width: 100%' } ) do |f| %>
+        <ul>
+        <% @newfeed.errors.full_messages.each do |error| %>
+          <li><%= error %></li>
+        <% end %>
+        </ul>
+        <p>
+          <%= f.text_field( :url) %>
+          <%= f.submit "+" %>
+        </p>
+      <% end %>
+
     </div>
 
     <div class = "articles">
