User model was added with very basic functionality. Users can sign up, log in, log out, and delete their account (with a warning message). Feeds are not currently associated with Users. The are entirely separate at the moment.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,13 @@
     <div class = "feeds">
       <%= link_to "Home", "/" %>
       <span style = "float: right">
-        <%= "kurionta v"%>
+        <% if cookies[:user].nil? %>
+          <%= link_to "Sign Up", controller: "users", action: "new", class: "new_user" %>
+          <%= " or "%>
+          <%= link_to "Sign In", controller: "users", action: "signin" %>
+        <% else %>
+          <%= link_to @user.email, controller: "users", action: "show" %>
+        <% end %>
       </span>
       <hr>
       <% @feeds.each do |feed| %>
