--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,25 @@
  *= require bootstrap
  *= require_tree .
 */
+.main {
+    height: 100%;
+    max-height: 100%;
+}
+.section {
+    float: left;
+    overflow:auto;
+    padding: 2%;
+}
+.feeds {
+    width: 30%;
+    background-color: black;
+    text-align: left;
+    color: white;
+    a {
+      color: white;
+    }
+}
+.articles {
+    width: 70%;
+    background-color: white;
+}
