--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <h1><%= @user.email %></h1>
 <p>
-<%= link_to "Log Out", controller: "users", action: "logout"%>
+  <%= link_to "Log Out", controller: "users", action: "logout"%>
 </p>
+<br>
 <p>
-<%= link_to "DELETE USER", user_path, method: :delete, data: {confirm: "Are you sure you want to permanently delete your account?"} %>
+  <%= button_to "DELETE USER", user_path, method: :delete, data: {confirm: "Are you sure you want to permanently delete your account?"} %>
 </p>
