--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -4,7 +4,19 @@
 
 <% @feed.articles.each do |article| %>
   <ul>
-    <p><%= link_to article.title, feed_article_path(@feed,article) %></p>
+    <p><%= link_to article.title, feed_article_path(@feed,article) %>
+
+      <span style = "float:right;">
+        <%= "[" %>
+        <% if article.viewed? %>
+          <%= link_to "✔", toggle_viewed_feed_article_path(@feed,article) %>
+        <% else %>
+          <%= link_to "_",  toggle_viewed_feed_article_path(@feed,article) %>
+        <% end %>
+        <%= "]" %>
+      </span>
+
+    </p>
   </ul>
 <% end %>
 
