Not accounts for exceptions whenever it runs a Model.find or an open(url). Rubocop and Rspec have both been run, giving 100% pass on each. This only means we need more tests.

--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -5,6 +5,9 @@
   <% @feed.errors.full_messages.each do |error| %>
     <li><%= error %></li>
   <% end %>
+  <% if flash.alert %>
+    <li><%= flash.alert %></li>
+  <% end %>
   </ul>
   <p>
     <%= f.label :url %><br />
