--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body class = "main">
+    <%= include_rails_script %>
     <div class = "main feeds section">
       <%= link_to "Home", "/" %>
       <span style = "float: right">
@@ -43,7 +44,6 @@
           <%= f.submit "+" %>
         </p>
       <% end %>
-
     </div>
 
     <div class = "main articles section">
