--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,23 +1,15 @@
 <h1><%= @feed.title %></h1>
 <p><%= @feed.url %></p>
 <p><%= @feed.description %></p>
-
+<div class='article-wrapper'>
 <% @feed.articles.each do |article| %>
-  <ul>
-    <p><%= link_to article.title, feed_article_path(@feed,article) %>
+    <p>
+      <%= check_box_tag 'viewed', "/feeds/#{@feed.id}/articles/#{article.id}", article.viewed?, class: "article-hasBeenRead", remote: true %>
 
-      <span style = "float:right;">
-        <%= "[" %>
-        <% if article.viewed? %>
-          <%= link_to "✔", toggle_viewed_feed_article_path(@feed,article) %>
-        <% else %>
-          <%= link_to "_",  toggle_viewed_feed_article_path(@feed,article) %>
-        <% end %>
-        <%= "]" %>
-      </span>
-
+      <%= link_to article.title, feed_article_path(@feed,article) %>
     </p>
-  </ul>
+
 <% end %>
+</div>
 
 <%= link_to "<< Back to Feeds List", feeds_path %>
