--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,3 @@
-
-
 <h1 style = "text-align: center;"><%= "Latest" %></h1>
 <hr>
-<% @articles.each do |article| %>
-  <h3><%= article.title %></h3>
-  <p><%= article.description.html_safe %></p>
-  <hr>
-<% end %>
+<%= render @articles %>
