--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,2 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.description.html_safe %></p>
-<p><%= link_to @article.link %></p>
-<p><%= @article.author %></p>
-<p><%= @article.pub_date %></p>
-
+<%= render @article, full: true %>
 <%= link_to "<< Back to Articles List", feed_path(@article.feed) %>
