Following the pattern of the previous commit, _feed.html.erb was created and every time a feed is displayed it uses either render(feed) or render(feed,full: true) to display more than just a link to the feed.

--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,6 +1,3 @@
-<h1><%= @feed.title %></h1>
-<p><%= @feed.url %></p>
-<p><%= @feed.description %></p>
-<%= render @articles %>
+<%= render @feed, full: true %>
 
 <%= link_to "<< Back to Feeds List", feeds_path %>
