Using ActionCables each User has their own subscrptions to FeedChannel. Feed.create and Feed.delete will lead to ActionCable.server.broadcast() if successful. The javascript portion then updates the html feed_links class sections.

--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Feeds</h1>
 
-<ul id="feeds">
+<div class="feed_links">
 <%= render @feeds %>
-</ul>
+</div>
 
 <%= link_to "Create a New Feed", new_feed_path, class: "new_feed" %>
