--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,11 @@
         <% end %>
       </span>
       <hr>
-      <%= render @feeds %>
+      <div class="feed_links">
+        <%= render @feeds %>
+      </div>
       <hr>
-      <%= form_for(@newfeed, :html => {:style => 'color: black; width: 100%' } ) do |f| %>
+      <%= form_for(@newfeed, remote: true, html: {:style => 'color: black; width: 100%' }) do |f| %>
         <ul>
         <% @newfeed.errors.full_messages.each do |error| %>
           <li><%= error %></li>
@@ -34,9 +36,7 @@
           <%= f.submit "+" %>
         </p>
       <% end %>
-
     </div>
-
     <div class = "main articles section">
       <%= yield %>
     </div>
