--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,7 +9,7 @@
 <hr>
 <% if local_assigns[:full] %>
   <p><%= article.description.html_safe %></p>
-  <p><%= link_to article.link %></p>
+  <p><%= link_to article.link, article.link %></p>
   <p><%= article.author %></p>
   <p><%= article.pub_date %></p>
 <% end %>
