ActionCables now removes articles and feeds from html when the feed is deleted through the controller. Issues remain. 1) If I delete feed 130 and return to /feeds/130 it will register that that feed exists but it will have no properties, throwing an error when trying to generate the view for feeds/130. 2)  render_to_string does not appear to have access to local_assigns, making render_to_string(@article, full: true) produce the same output as render_to_string(@article, full: false). 3)Models do not have access to the function render_to_string or functions defined in the application controller. As I pull apart responsiblities I will have to keep it in the controller.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,4 @@
-<%= render @article, full: true %>
+<div = "articles">
+  <%= render @article, full: true %>
+</div>
 <%= link_to "<< Back to Articles List", feed_path(@article.feed) %>
