--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,3 +1,13 @@
+<% if local_assigns[:update].nil? %>
+  <div class=
+  <% if local_assigns[:full] %>
+    <%="article_link_#{article.id}"%>
+  <% else %>
+    <%="article_#{article.id}" %>
+  <% end %>
+  >
+<% end %>
+
 <h3>
   <%= check_box_tag 'viewed', feed_article_path(article.feed,article), article.viewed?, class: "article-hasBeenRead", remote: true %>
   <% if local_assigns[:full] %>
@@ -12,4 +22,8 @@
   <p><%= link_to article.link, article.link %></p>
   <p><%= article.author %></p>
   <p><%= article.pub_date %></p>
+<% end %>
+
+<% if local_assigns[:update].nil? %>
+  </div>
 <% end %>
