Refactored code to appease rubocop violations. Altered _feed.html.erb to also hide feed description and link when feed is erased.

--- a/app/views/feeds/_feed.html.erb
+++ b/app/views/feeds/_feed.html.erb
@@ -20,14 +20,17 @@
   <%= ")" %>
 </span>
 
+<% if local_assigns[:full] %>
+  </h1>
+  <p><%= feed.url %></p>
+  <p><%= feed.description %></p>
+<% end %>
+
 <% if local_assigns[:update].nil? %>
   </div>
 <% end %>
 
 <% if local_assigns[:full] %>
-  </h1>
-  <p><%= feed.url %></p>
-  <p><%= feed.description %></p>
   <div class=
     <%="article_links_#{feed.id}"%>
   >
